src/objects/smagicworkflow__WorkflowXMLMap__c.object
<CustomObject>
    <fields>
        <fullName>smagicworkflow__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicworkflow__Short_Name__c</fullName>
        <label>Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicworkflow__Template1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Template 1</label>
        <referenceTo>smagicinteract__SMS_Template__c</referenceTo>
        <relationshipLabel>Workflow XML Configurations</relationshipLabel>
        <relationshipName>Workflow_XML_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicworkflow__Template2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Template 2</label>
        <referenceTo>smagicinteract__SMS_Template__c</referenceTo>
        <relationshipLabel>Workflow XML Configurations (Template2)</relationshipLabel>
        <relationshipName>Workflow_XML_Configurations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicworkflow__XML_Name__c</fullName>
        <label>Config Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>smagicworkflow__XML_String__c</fullName>
        <label>XML String</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Workflow XML Configuration</label>
    <listViews>
        <fullName>smagicworkflow__All</fullName>
        <columns>NAME</columns>
        <columns>smagicworkflow__Short_Name__c</columns>
        <columns>smagicworkflow__Description__c</columns>
        <columns>smagicworkflow__XML_Name__c</columns>
        <columns>smagicworkflow__XML_String__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workflow XML Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>